@@ -57,12 +57,15 @@ public class VectorUtilBenchmark {
   private byte[] halfBytesAPacked;
   private byte[] halfBytesB;
   private byte[] halfBytesBPacked;
+  private byte[] halfBytesUnpackDest;
   private byte[] int4QuantizedBit;
   private byte[] binaryQuantized;
   private byte[] int4QuantizedDibit;
   private byte[] dibitQuantized;
   private float[] floatsA;
   private float[] floatsB;
+  private short[] shortsA;
+  private short[] shortsB;
   private int expectedHalfByteDotProduct;
   private int expectedHalfByteSquareDistance;
 
@@ -99,14 +102,21 @@ public class VectorUtilBenchmark {
 
       halfBytesBPacked = new byte[(size + 1) >> 1];
       compressBytes(halfBytesB, halfBytesBPacked);
+
+      // destination for the unpack benchmarks
+      halfBytesUnpackDest = new byte[halfBytesAPacked.length * 2];
     }
 
     // random float arrays for float methods
     floatsA = new float[size];
     floatsB = new float[size];
+    shortsA = new short[size];
+    shortsB = new short[size];
     for (int i = 0; i < size; ++i) {
       floatsA[i] = random.nextFloat();
+      shortsA[i] = Float.floatToFloat16(floatsA[i]);
       floatsB[i] = random.nextFloat();
+      shortsB[i] = Float.floatToFloat16(floatsB[i]);
     }
 
     // arrays for BBQ int4-bit and int4-dibit dot product benchmarks
@@ -282,6 +292,19 @@ public class VectorUtilBenchmark {
   }
 
   @Benchmark
+  public byte[] binaryHalfByteUnpackScalar() {
+    VectorUtil.int4Unpack(halfBytesAPacked, halfBytesUnpackDest);
+    return halfBytesUnpackDest;
+  }
+
+  @Benchmark
+  @Fork(jvmArgsPrepend = {"--add-modules=jdk.incubator.vector"})
+  public byte[] binaryHalfByteUnpackVector() {
+    VectorUtil.int4Unpack(halfBytesAPacked, halfBytesUnpackDest);
+    return halfBytesUnpackDest;
+  }
+
+  @Benchmark
   public int binaryHalfByteDotProductSinglePackedScalar() {
     int v = VectorUtil.int4DotProductSinglePacked(halfBytesA, halfBytesBPacked);
     if (v != expectedHalfByteDotProduct) {
@@ -356,6 +379,11 @@ public class VectorUtilBenchmark {
       jvmArgsPrepend = {"--add-modules=jdk.incubator.vector"})
   public float floatDotProductVector() {
     return VectorUtil.dotProduct(floatsA, floatsB);
+  }
+
+  @Benchmark
+  public float fp16DotProductScalar() {
+    return VectorUtil.dotProduct(shortsA, shortsB);
   }
 
   @Benchmark
